--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,11 @@
       "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
-    }
+    },
+   {
+      "src": "icons/icon-150x150.png",
+      "sizes": "150x150",
+      "type": "image/png"
+    } 
   ]
 }
