--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Police Files",
   "short_name": "PoliceFiles",
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#fafafa",
   "theme_color": "#3f51b5",
   "icons": [
