--- a/twa-manifest.json
+++ b/twa-manifest.json
@@ -1,7 +1,7 @@
 {
   "appName": "Police Files",
   "packageId": "com.chunnupr.policefiles",
-  "host": "chunnupr.github.io",
+  "host": "https://chunnupr.github.io/",
   "launchUrl": "/",
   "display": "fullscreen",
   "themeColor": "#000000",
